--- a/index.html
+++ b/index.html
@@ -87,24 +87,33 @@
             background-color: #303030;
         }
 
-        /* Default Styles: Show desktop nav, hide mobile nav */
-        .nav {
-            display: flex; /* Visible by default */
-        }
+/* Default Styles: Show desktop nav, hide mobile nav */
+.nav {
+    display: flex; /* Desktop nav visible by default */
+}
 
-        .nav.mobile {
-            display: none; /* Hidden by default */
-        }
+.nav.mobile {
+    display: none; /* Mobile nav hidden by default */
+}
 
-        /* Small Screens: Hide desktop nav, show mobile nav */
-        @media (max-width: 768px) {
-            .nav {
-                display: none; /* Hide desktop navigation */
-            }
+/* Small Screens: Hide desktop nav, show mobile nav */
+@media (max-width: 768px) {
+    .nav {
+        display: none; /* Hide desktop navigation */
+    }
 
-            .menu-icon {
-                display: block; /* Show hamburger icon */
-            }
+    .nav.mobile {
+        display: flex; /* Show mobile navigation */
+        flex-direction: column;
+        background-color: #101010;
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 100%;
+        gap: 0;
+        border-top: 2px solid #303030;
+    }
+}
 
             .nav.mobile {
                 display: flex; /* Show mobile navigation */
