--- a/DepthUI.htm
+++ b/DepthUI.htm
@@ -1,127 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DepthUI by Tudify</title>
-    <style>
-        /* Import DM Sans */
-        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-
-        /* Global Styles */
-        body {
-            font-family: 'DM Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #1a1a1a;
-            color: #f0f0f0;
-        }
-        
-        h1, h2 {
-            text-align: center;
-        }
-        
-        .header {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
-        }
-
-        /* Expanding Stack of Images */
-        .stacked-images {
-            position: relative;
-            max-width: 500px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            perspective: 100px;
-        }
-        .stacked-images img {
-            position: absolute;
-            max-width: 500px;
-            height: auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.4s ease, opacity 0.4s ease;
-        }
-        .stacked-images img:nth-child(1) { transform: translateY(0px) scale(0.9); }
-        .stacked-images img:nth-child(2) { transform: translateY(20px) scale(0.95); }
-        .stacked-images img:nth-child(3) { transform: translateY(40px) scale(1); }
-
-        /* Expand effect on scroll */
-        .stacked-images img:hover {
-            transform: translateY(-10px) scale(1.05);
-            opacity: 1;
-            z-index: 1;
-        }
-
-        /* Sections with Image and Text Side-by-Side */
-        .section {
-            display: flex;
-            align-items: center;
-            max-width: 1200px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #252525;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-        .section:nth-child(even) { flex-direction: row-reverse; }
-        .section img {
-            width: 45%;
-            height: auto;
-            border-radius: 8px;
-            margin: 0 20px;
-        }
-        .section-text {
-            flex: 1;
-            text-align: left;
-        }
-        h2 {
-            color: #ffd700;
-        }
-        p {
-            color: #ccc;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="header">
-        <h1>DepthUI by Tudify</h1>
-        <p>Experience a new level of mobile UI</p>
-    </div>
-
-
-
-    <!-- Home Screen Section -->
-    <div class="section" id="home-screen">
-        <img src="hs.png" alt="Home Screen">
-        <div class="section-text">
-            <h2>Home Screen</h2>
-            <p>DepthUI’s beautifully modern Home Screen, designed for simplicity and ease of use. Swipe through your apps, check notifications, and stay updated at a glance.</p>
-        </div>
-    </div>
-
-    <!-- Messages Screen Section -->
-    <div class="section" id="messages-screen">
-        <img src="m.png" alt="Messages Screen">
-        <div class="section-text">
-            <h2>Messages</h2>
-            <p>Stay connected seamlessly with DepthUI’s message interface, designed for clear and easy communication. Whether texting or using voice, DepthUI ensures a seamless experience.</p>
-        </div>
-    </div>
-
-    <!-- About Section -->
-    <div class="section" id="about">
-        <img src="ab.png" alt="About DepthUI">
-        <div class="section-text">
-            <h2>App Browser</h2>
-            <p>DepthUI by Tudify brings you an innovative mobile experience, combining design and functionality in one. Each screen and feature is designed with user experience in mind.</p>
-        </div>
-    </div>
-
-</body>
+<html>
+    <head>
+        <meta http-equiv="refresh" content="0;url=https://www.figma.com/proto/oKd75BsuCzWsPtaCt19P6x/TudifyDUI?node-id=164-2958&t=0rDXWIvJa0A7PVdG-1">
+        <title>Redirecting...</title>
+    </head>
+    <h1> LOADING </h1>
 </html>
