--- a/myrepair/index.htm
+++ b/myrepair/index.htm
@@ -26,6 +26,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            text-align: center;
         }
         .sidebar h2 {
             margin-bottom: 20px;
@@ -49,12 +50,12 @@
         }
         .no-device {
             margin-bottom: 10px;
-            background-color: red;
+            background-color: black;
             padding: 5px;
             border-radius: 5px;
         }
         .sign-in {
-            background-color: blue;
+            background-color: black;
             padding: 5px;
             border-radius: 5px;
             cursor: pointer;
