--- a/myrepair/index.htm
+++ b/myrepair/index.htm
@@ -100,19 +100,19 @@
     <div class="content">
         <div id="home" class="tab-content active">
             <h1>Welcome to Tudify MyRepair</h1>
-            <p>We provide top-quality repairs for all your devices.</p>
+            <p>Tudify ❤️ technicians </br> Keeping our repair community strong is of great value to us, help us keep it that way.</p>
         </div>
         <div id="devices" class="tab-content">
-            <h1>Supported Devices</h1>
-            <p>We repair a wide range of devices including phones, laptops, and more.</p>
+            <h1>No Devices Detected.</h1>
+            <p>you must use a USBC cable with data lines and a supported phone.</p>
         </div>
         <div id="diagnosis" class="tab-content">
             <h1>Diagnosis</h1>
-            <p>Get a professional diagnosis for your device issues.</p>
+            <p>when connected, your device's TDF.log file will be here.</p>
         </div>
         <div id="setup" class="tab-content">
-            <h1>Setup Services</h1>
-            <p>We assist with setting up and configuring your devices.</p>
+            <h1>Setup</h1>
+            <p></p>
         </div>
     </div>
 </body>
