--- a/myrepair/index.htm
+++ b/myrepair/index.htm
@@ -93,7 +93,8 @@
                 const reasonMap = {
                     "NND": "NAND Issue Detected",
                     "NoSt": "No Safe Telecom Channel",
-                    "NAND_degrade": "NAND Storage is Degraded"
+                    "NAND_degrade": "NAND Storage is Degraded",
+                    "Corrupt": "The file tree is corrupt"
                 };
 
                 if (issueMap[issueText]) issueText = issueMap[issueText];
